fix: table overflow, borders and alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,6 +19,7 @@
 .box-inner-doc {
     margin: 0px;
     width: 50%;
+    overflow: auto;
     display: inline-block;
     float: left;
     height: 130px;
@@ -65,6 +66,9 @@
     font-weight: bold;
 }
 
+table {
+    border-color: black;
+}
 
 td.martedì {
     background-color: #eeeeee;
@@ -80,4 +84,9 @@ th.martedì {
 
 th.giovedì {
     background-color: #eeeeee;
+}
+
+tr.ora13h00 {
+    border-top-width: thick;
+    border-top-color: red;
 }
